vmagent-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vmagent
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vmagent
  template:
    metadata:
      labels:
        app: vmagent
    spec:
      containers:
        - name: vmagent
          image: victoriametrics/vmagent:v1.93.0  # adapte la version si besoin
          args:
            - -promscrape.config=/etc/vmagent/vmagent.yml
            - -remoteWrite.url=http://victoria-metrics:8428/api/v1/write
          volumeMounts:
            - name: vmagent-config
              mountPath: /etc/vmagent/vmagent.yml
              subPath: vmagent.yml
      volumes:
        - name: vmagent-config
          configMap:
            name: vmagent-config
