vmagent-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vmagent
  namespace: test
  labels:
    app: vmagent
spec:
  selector:
    app: vmagent
  ports:
    - protocol: TCP
      port: 8429
      targetPort: 8429
  type: ClusterIP
