vmagent-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmagent-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: vmagent.test.mondomaine.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmagent
                port:
                  number: 8429
